--- a/karatekainfobd/features/templates/base.html
+++ b/karatekainfobd/features/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+{% load static %}
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +12,18 @@
 </head>
 <body>
 
-    {% block main_block %}
-    {% endblock %}
+    <div>
+
+        <div class="text-center p-4 mb-4 bg-dark text-black">
+           <h2>
+               <a href="{% url 'homepage' %}" class="text-white"> Karateka Info BD </a>
+           </h2>
+        </div>
+
+        {% block main_block %}
+        {% endblock %}
+
+    </div>
 
 </body>
 </html>
