--- a/karatekainfobd/features/templates/features/show_all_athletes_page.html
+++ b/karatekainfobd/features/templates/features/show_all_athletes_page.html
@@ -35,20 +35,42 @@
           {% render_field athlete_filter.form.individual_kata_event class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.individual_kata_active.label_tag }}
+          {% render_field athlete_filter.form.individual_kata_active class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
           {{ athlete_filter.form.individual_kumite_event.label_tag }}
           {% render_field athlete_filter.form.individual_kumite_event class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.individual_kumite_active.label_tag }}
+          {% render_field athlete_filter.form.individual_kumite_active class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
           {{ athlete_filter.form.team_kata_event.label_tag }}
           {% render_field athlete_filter.form.team_kata_event class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.team_kata_active.label_tag }}
+          {% render_field athlete_filter.form.team_kata_active class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
           {{ athlete_filter.form.team_kumite_event.label_tag }}
           {% render_field athlete_filter.form.team_kumite_event class="form-control" %}
         </div>
+         <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.team_kumite_active.label_tag }}
+          {% render_field athlete_filter.form.team_kumite_active class="form-control" %}
+        </div>
       </div>
       <button type="submit" class="btn btn-primary">
-        <span class="glyphicon glyphicon-search"></span> Search
+        <span>
+            <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z" clip-rule="evenodd"/>
+            </svg>
+        </span>
+        Search
       </button>
     </div>
   </form>
@@ -72,6 +94,46 @@
                 <p class="font-weight-lighter">Weight: {{athlete.weight}} kg</p>
                 <p class="font-weight-lighter">Club: {{athlete.club.name}}</p>
                 <p class="font-weight-lighter">Team: {{athlete.team.name}}</p>
+                {% if athlete.individual_kata_event %}
+                    <p class="font-weight-lighter">
+                        {{athlete.individual_kata_event}}
+                        {% if athlete.individual_kata_active %}
+                            (Active)
+                        {% else %}
+                            (Inactive)
+                        {% endif %}
+                    </p>
+                {% endif %}
+                {% if athlete.individual_kumite_event %}
+                    <p class="font-weight-lighter">
+                        {{athlete.individual_kumite_event}}
+                        {% if athlete.individual_kumite_active %}
+                            (Active)
+                        {% else %}
+                            (Inactive)
+                        {% endif %}
+                    </p>
+                {% endif %}
+                {% if athlete.team_kata_event %}
+                    <p class="font-weight-lighter">
+                        {{athlete.team_kata_event}}
+                        {% if athlete.team_kata_active %}
+                            (Active)
+                        {% else %}
+                            (Inactive)
+                        {% endif %}
+                    </p>
+                {% endif %}
+                {% if athlete.team_kumite_event %}
+                    <p class="font-weight-lighter">
+                        {{athlete.team_kumite_event}}
+                        {% if athlete.team_kumite_active %}
+                            (Active)
+                        {% else %}
+                            (Inactive)
+                        {% endif %}
+                    </p>
+                {% endif %}
                 <p class="font-weight-lighter">Gold: {{athlete.gold}}</p>
                 <p class="font-weight-lighter">Silver: {{athlete.silver}}</p>
                 <p class="font-weight-lighter">Bronze: {{athlete.bronze}}</p>
