Added Championship, ChampionshipStanding models. Implemented pages for these models.
Clicking on an Athlete redirects to their page. Clicking on a Championship redirects to a page displaying the Athletes' results in it. Description field added to Athlete. logo_picture field added to Club and Team.

--- a/karatekainfobd/features/templates/features/homepage.html
+++ b/karatekainfobd/features/templates/features/homepage.html
@@ -6,6 +6,7 @@
 
         <a class="btn btn-outline-light" href="{% url 'enter_athlete_page' %}" role="button">Enter Athlete Info</a>
         <a class="btn btn-outline-light" href="{% url 'show_all_athletes_page' %}" role="button">View Athletes</a>
+        <a class="btn btn-outline-light" href="{% url 'show_all_championships_page' %}" role="button">View Championships</a>
 
     </div>
 </div>
