--- a/karatekainfobd/features/templates/features/show_all_athletes_page.html
+++ b/karatekainfobd/features/templates/features/show_all_athletes_page.html
@@ -62,6 +62,10 @@
           {{ athlete_filter.form.team_kumite_active.label_tag }}
           {% render_field athlete_filter.form.team_kumite_active class="form-control" %}
         </div>
+         <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.active.label_tag }}
+          {% render_field athlete_filter.form.active class="form-control" %}
+        </div>
       </div>
       <button type="submit" class="btn btn-primary">
         <span>
@@ -75,16 +79,12 @@
     </div>
   </form>
 
-<!--<form method="get">-->
-<!--    {% csrf_token %}-->
-<!--    {{ athlete_filter.form.as_p }}-->
-<!--    <button class="btn btn-primary" type="submit">Submit</button>-->
-<!--</form>-->
-
 {% for athlete in athlete_page_obj %}
 <div class="nav justify-content-center">
     <div class="card" style="width: 35rem;">
-        <img src="{{ athlete.picture.url }}" class="card-img-top" width="120">
+        <a href="{% url 'show_athlete_page' athlete.id %}">
+            <img src="{{ athlete.picture.url }}" class="card-img-top" width="120">
+        </a>
         <div class="card-body">
             <h2>
                 <p class="card-title">{{athlete.name}}</p>
@@ -137,6 +137,13 @@
                 <p class="font-weight-lighter">Gold: {{athlete.gold}}</p>
                 <p class="font-weight-lighter">Silver: {{athlete.silver}}</p>
                 <p class="font-weight-lighter">Bronze: {{athlete.bronze}}</p>
+                <p class="font-weight-lighter">
+                    {% if not athlete.active %}
+                        Retired
+                    {% else %}
+                        Active
+                    {% endif %}
+                </p>
             </h2>
         </div>
     </div>
