util functions for show_all_clubs, show_all_teams, club_detail and team_detail views, scripts and get_model_csv functions. Scripts for loading Championship and ChampionshipStanding models.

--- a/karatekainfobd/features/templates/features/show_all_championships_page.html
+++ b/karatekainfobd/features/templates/features/show_all_championships_page.html
@@ -13,7 +13,7 @@
         <div class="card-body">
             <h2>
                 <p class="lead font-weight-lighter">
-                    <em> {{ championship.title }} </em>
+                    <em> {{ championship.name }} </em>
                     <a href="{% url 'show_championshipstandings_page' championship.id %}">View standings</a>
                 </p>
                 <p class="font-weight-lighter">{{championship.start_date}}</p>
