--- a/karatekainfobd/features/templates/features/show_championshipstandings_page.html
+++ b/karatekainfobd/features/templates/features/show_championshipstandings_page.html
@@ -1,7 +1,7 @@
 {% extends 'features/show_athlete_page.html' %}
 
 {% block main_block1 %}
-<h3> Standings in {{ championship.title }} </h3>
+<h3> Standings in {{ championship.name }} </h3>
 {% endblock %}
 
 {% block main_block2 %}
