--- a/karatekainfobd/features/templates/features/show_all_athletes_page.html
+++ b/karatekainfobd/features/templates/features/show_all_athletes_page.html
@@ -19,8 +19,12 @@
           {% render_field athlete_filter.form.gender class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
-          {{ athlete_filter.form.weight.label_tag }}
-          {% render_field athlete_filter.form.weight class="form-control" %}
+          {{ athlete_filter.form.weight__gte.label_tag }}
+          {% render_field athlete_filter.form.weight__gte class="form-control" %}
+        </div>
+        <div class="form-group col-sm-4 col-md-3">
+          {{ athlete_filter.form.weight__lte.label_tag }}
+          {% render_field athlete_filter.form.weight__lte class="form-control" %}
         </div>
         <div class="form-group col-sm-4 col-md-3">
           {{ athlete_filter.form.club.label_tag }}
@@ -134,9 +138,9 @@
                         {% endif %}
                     </p>
                 {% endif %}
-                <p class="font-weight-lighter">Gold: {{athlete.gold}}</p>
-                <p class="font-weight-lighter">Silver: {{athlete.silver}}</p>
-                <p class="font-weight-lighter">Bronze: {{athlete.bronze}}</p>
+<!--                <p class="font-weight-lighter">Gold: {{athlete.gold}}</p>-->
+<!--                <p class="font-weight-lighter">Silver: {{athlete.silver}}</p>-->
+<!--                <p class="font-weight-lighter">Bronze: {{athlete.bronze}}</p>-->
                 <p class="font-weight-lighter">
                     {% if not athlete.active %}
                         Retired
