--- a/karatekainfobd/features/templates/features/show_all_clubs_page.html
+++ b/karatekainfobd/features/templates/features/show_all_clubs_page.html
@@ -4,7 +4,7 @@
 
 {% block main_block %}
 
-{% for club in club_page_obj %}
+{% for club in org_page_obj %}
 <div class="nav justify-content-center">
     <div class="card" style="width: 35rem;">
         {% if club.logo_picture %}
